--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -5,7 +5,7 @@
     --height-user-container: clamp(60px, 15vh, 115px);
     background: linear-gradient(to right top, #F2F9FE, #F3F6FF);
     border-top-right-radius: 12px;
-    box-shadow: 5px 2px 6px #647ad380;
+    box-shadow: 5px 2px 6px #647ad356;
     display: flex;
     flex-direction: column;
     height: 100dvh;
@@ -20,10 +20,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 30px;
+    gap: 5px;
     flex: 1 1 auto;
     width: 100%;
-
 }
 
 .navHeader {
